<resources>
    <string name="app_name">Swoosh</string>
    <string name="mensButtonLabel">Mens</string>
    <string name="womensButtonLabel">Womens</string>
    <string name="co_edButtonLabel">CO-ED</string>
    <string name="nextButtonLabel">Next</string>
    <string name="a_basketball_court_with_people_on_it">A basketball court with people on it</string>
    <string name="the_swoosh_logo">The Swoosh logo</string>
    <string name="desired_league">Desired League</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="get_started">Get Started</string>
    <string name="i_am_a">I am a</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="done">Finish</string>
    <string name="background3">A basketball hoop</string>
    <string name="title_activity_finish">FinishActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_big_old_basketball_hoop">A big old basketball hoop</string>
</resources>
